--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,43 @@ body {
   height: 300px;
   background-size: cover;
   margin: 0.5rem;
+  -webkit-transition: all ease-in-out 200ms;
+  transition: all ease-in-out 200ms;
+}
+
+.cards:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
+
+.inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all ease-in-out 0.8s;
+  transition: all ease-in-out 0.8s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.front {
+  background-image: url("../img/bg.png");
+  background-size: cover;
+}
+
+.back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  background-size: cover;
 }
 
 .cards + div {
@@ -82,7 +119,7 @@ body {
 .dropzone {
   width: 214px;
   height: 310px;
-  border: solid thin grey;
+  border: dashed thick #e5e5e5;
   margin-top: 2rem;
 }
 
