--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,37 @@ body {
     height: 300px;
     background-size: cover;
     margin: 0.5rem;
+    transition: all ease-in-out 200ms;
+}
+
+.cards:hover {
+    transform: scale(1.05);
+}
+
+.inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: all ease-in-out 0.8s;
+    transform-style: preserve-3d;
+}
+
+.front,
+.back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.front {
+    background-image: url("../img/bg.png");
+    background-size: cover;
+}
+
+.back {
+    transform: rotateY(180deg);
+    background-size: cover;
 }
 
 .cards + div {
@@ -67,7 +98,7 @@ body {
 .dropzone {
     width: 214px;
     height: 310px;
-    border: solid thin grey;
+    border: dashed thick #e5e5e5;
     margin-top: 2rem;
     div {
         opacity: 1 !important;
