--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,17 @@
+html {
+    height: 100%;
+}
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    // height: 100vh;
+    font-family: "Roboto";
+    line-height: 1.4;
+    background-image: url("../img/light2.jpg");
+    min-height: 100%;
+    background-size: cover;
 }
 
 .flip-card {
@@ -26,7 +35,7 @@ body {
         backface-visibility: hidden;
     }
     .front {
-        background-image: url("../img/bg.jpg");
+        background-image: url("../img/bg_fh-100.jpg");
     }
     .back {
         transform: rotateY(180deg);
@@ -59,10 +68,33 @@ body {
     background-size: cover;
     margin: 0.5rem;
     transition: all ease-in-out 200ms;
+    cursor: pointer;
+    // box-shadow: #a795b3 0.25rem 0.25rem 0.75rem;
+}
+
+.flippedBox {
+    background: #5f407c;
+    border: none !important;
+    /* margin: 1rem; */
+    padding: 2rem;
+    transition: all ease-in-out 200ms;
+}
+
+.flippebBox::after {
+    content: "Auf dem Kopf";
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background: red;
+}
+
+.dropzone {
+    transition: all ease-in-out 200ms;
 }
 
 .cards:hover {
     transform: scale(1.05);
+    transform: translateX(-1.75rem) rotate(5deg);
 }
 
 .inner {
@@ -82,7 +114,7 @@ body {
 }
 
 .front {
-    background-image: url("../img/bg.png");
+    background-image: url("../img/bg_fh.png");
     background-size: cover;
 }
 
@@ -92,17 +124,31 @@ body {
 }
 
 .cards + div {
-    margin-left: -1rem;
+    margin-left: -12rem;
 }
 
 .dropzone {
-    width: 214px;
-    height: 310px;
+    width: 230px;
+    height: 325px;
     border: dashed thick #e5e5e5;
     margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     div {
         opacity: 1 !important;
     }
+}
+
+.head {
+    margin-bottom: 1rem;
+    font-weight: 600;
+}
+
+.txtInnen {
+    color: #e5e5e5;
+    font-weight: 700;
+    font-size: 1.5rem;
 }
 
 .cardwrapper {
@@ -127,6 +173,13 @@ body {
     width: 33%;
 }
 
+.kopf {
+    border: solid thin grey;
+    padding: 1rem;
+    margin-top: 2rem;
+    background: #ededed;
+}
+
 .flip-horizontal-top {
     -webkit-animation: flip-horizontal-top 0.4s
         cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
@@ -143,6 +196,11 @@ body {
 .heartbeat {
     -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
     animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+.fade-in {
+    -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 @-webkit-keyframes heartbeat {
@@ -255,5 +313,22 @@ body {
     100% {
         -webkit-transform: rotateX(180deg);
         transform: rotateX(180deg);
+    }
+}
+
+@-webkit-keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
