--- a/css/main.css
+++ b/css/main.css
@@ -85,8 +85,8 @@ body {
 }
 
 .cards {
-  width: 204px;
-  height: 300px;
+  width: 150px;
+  height: 220px;
   background-size: cover;
   margin: 0.5rem;
   -webkit-transition: -webkit-transform ease-in-out 100ms;
@@ -161,12 +161,12 @@ body {
 }
 
 .cards + div {
-  margin-left: -12rem;
+  margin-left: -10.5rem;
 }
 
 .dropzone {
-  width: 230px;
-  height: 325px;
+  width: 191px;
+  height: 280px;
   border: dashed thick #e5e5e5;
   margin-top: 2rem;
   display: -webkit-box;
@@ -244,7 +244,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 960px;
+  width: 100%;
+  max-width: 960px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
