--- a/css/main.scss
+++ b/css/main.scss
@@ -162,6 +162,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url(../img/SVG/bgfh_2.svg);
     div {
         opacity: 1 !important;
     }
@@ -192,12 +193,12 @@ body {
     justify-content: center;
     color: #cab8cc;
     font-weight: 500;
-    font-size: 1rem;
+    // font-size: 1.25rem;
     flex-direction: column;
     margin-top: 1rem;
     -webkit-transition: all ease-in-out 200ms;
     transition: all ease-in-out 200ms;
-    letter-spacing: 1.25px;
+    // letter-spacing: 1.25px;
 }
 
 .txtAussen::before {
@@ -209,8 +210,8 @@ body {
     margin: 0 -3rem;
 }
 
-.txtAussen:first-child::before {
-    // display: none;
+.txtAussen:nth-child(1)::before {
+    display: none;
 }
 
 .head {
@@ -224,6 +225,7 @@ body {
     font-size: 1rem;
     z-index: -4;
     text-align: center;
+    font-family: "DM Serif Text", serif;
     // font-family: "Nanum Myeongjo", serif;
     // font-family: "Tangerine", cursive;
     // font-family: ;
@@ -274,6 +276,7 @@ body {
     background: #220d2c;
     background-image: url("../img/bg_top.jpg");
     background-size: cover;
+    position: relative;
 }
 
 .wrapper {
@@ -288,11 +291,12 @@ body {
     width: 100%;
     max-width: 960px;
     justify-content: space-between;
+    margin-bottom: 3rem;
 }
 
 .zoneWrapper {
     margin: 1rem;
-    width: 33%;
+    width: calc(33% - 2rem);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -327,8 +331,8 @@ h2 {
 }
 
 .middle {
-    margin: 0;
-    padding: 1rem;
+    // margin: 0;
+    // padding: 1rem;
     // background: #e5ecf4;
 
     // background: #ffffff;
@@ -385,6 +389,28 @@ h2 {
         cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
     animation: shake-horizontal 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955)
         both;
+}
+
+.fade-out {
+    -webkit-animation: fade-out 1s ease-out both;
+    animation: fade-out 1s ease-out both;
+}
+
+@-webkit-keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 @-webkit-keyframes shake-horizontal {
@@ -586,8 +612,67 @@ h2 {
     }
 }
 
+.nextBtn {
+    display: none;
+}
+
+.scrolling-wrapper {
+    // overflow-x: scroll;
+    // overflow-y: hidden;
+    // white-space: nowrap;
+    // display: flex;
+    // flex-wrap: nowrap;
+    // overflow-x: auto;
+
+    // .card {
+    //   display: inline-block;
+    // }
+}
+
 @media (max-width: 1024px) {
     .cardwrapper {
-        background-image: none;
+        // background-image: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .dropWrapper {
+        max-width: 768px;
+    }
+}
+
+@media (max-width: 420px) {
+    .dropWrapper {
+        max-width: 420px;
+        overflow-x: scroll;
+        // overflow-y: hidden;
+        // white-space: nowrap;
+    }
+    .txtAussen {
+        font-size: 2rem;
+        margin-top: 2rem;
+    }
+    .nextBtn {
+        display: block;
+        opacity: 1;
+        padding: 1rem 2rem;
+        border: solid medium #9c27b0;
+        border-radius: 75px;
+        color: #9c27b0;
+        font-weight: 600;
+        margin-bottom: 3rem;
+        text-align: center;
+        margin-top: 2rem;
+    }
+
+    .zoneWrapper {
+        width: 100%;
+    }
+    .words {
+        padding: 0 3rem 3rem 3rem;
+
+        .thema {
+            text-align: center;
+        }
     }
 }
